1999-09-29  Rodrigo Stulzer Lopes <rodrigo@conectiva.com.br>

	* configure.in: add pt_BR to ALL_LINGUAS

1999-09-29  Ettore Perazzoli  <ettore@comm2000.it>

	* modules/ftp-method.c (MUTEX_LOCK): New macro to lock a mutex.
	Defined to empty if `G_THREADS_ENABLED' is not defined.
	(MUTEX_UNLOCK): New macro to unlock a mutex.  Defined to empty if
	`G_THREADS_ENABLED' is not defined.
	(ftpfs_connection_new) [G_THREADS_ENABLED]: Initialize
	`access_mutex'.
	(ftpfs_connection_unref): Perform locking.  Free the lock if
	refcounting is zero.

	* modules/ftp-method.h [G_THREADS_ENABLED]: New member
	`access_lock' in `ftpfs_connection_t'.

	* modules/ftp-method.c: Define a static lock for
	`connections_hash'.
	(ftpfs_connection_destroy): Removed.
	(ftpfs_connection_unref): Perform locking on `connections_hash'.
	(lookup_conn): Likewise.
	(ftpfs_connection_new): Likewise.

	* modules/ftp-method.c (ftpfs_open_directory): Use the raw URI
	path, without using `g_dirname()'.

1999-09-28  Ettore Perazzoli  <ettore@comm2000.it>

	* modules/bzip2-method.c: Re-indented in GNOME style.

	* configure.in: Added `--enable-gconf' option to explicitly enable
	the GConf module backend; if not specified, GConf support is not
	compiled even if GConf is available.  For now, the GConf API is
	too much of a moving target to rely on it by default.

	* modules/ftp-method.c (ftpfs_get_file_info): `#if 0'ed completely
	to get it to compile.  Always return `GNOME_VFS_ERROR_NOTSUPPORTED'.

1999-09-27  Miguel de Icaza  <miguel@gnu.org>

	* modules/module-shared.c (gnome_vfs_set_meta_for_list,
	gnome_vfs_set_meta, gnome_vfs_stat_to_file_info,
	gnome_vfs_mime_type_from_mode): moved here some code from the file
	backend that can be reused by the ftp backend.
	
	* modules/ftp-method.c: directory listings work.  Still some work
	is required.

1999-09-27  Cody Russell  <bratsche@dfw.net>

	* modules/bzip2-method.c: At Ettore's request, reformatted the